@@ -240,7 +240,7 @@ rnorm_bounded = function(n = 1,
   }
 
   out = rnorm(n, mean, sd)
-  out[roundToInteger] = round (out[roundToInteger], 0)
+  out[roundToInteger] = round(out[roundToInteger], 0)
   for (i in 1:n) {
     while (out[i] < low[i] | out[i] > high[i]) {
       out[i] = rnorm(1, mean[i], sd[i]) # repeat until a suitable value is generated
